# LazyVerilog

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO.md  lazyverilog.toml  params.svh  vcode.f
.github/workflows/: release.yml
autoload/: lazyverilog.vim
demo/: cip_base_env_1.sv  cip_base_vseq__shadow_reg_errors.svh  cip_macros_1.svh  csrng_scoreboard_1.sv  csrng_scoreboard_2.sv  dv_base_reg_field_1.sv  dv_utils_pkg_2.sv  edn_cov_if_1.sv  entropy_src_cov_if_1.sv  folding_demo.sv  i2c_scoreboard.sv  inv.sv  jtag_rv_debugger_2.sv  lc_ctrl_env_cov_1.sv  lc_ctrl_env_cov_2.sv  memory.sv  memory_top.sv  memory_top_formatted.sv  otbn_env_cov_1.sv  otbn_env_cov_2.sv  params.svh  pattgen_cov_if_1.sv  prim_lfsr_tb.sv  register.sv  test.sv  uvm.sv  uvm_autocomplete_test.sv  vcode.f  xdef_lib.sv  xdef_top.sv
demo/org_log/: 01_normalization_pass.sv  04_format_portlist_pass.sv  05_align_assign_pass.sv  07_align_port_pass.sv  11_expand_instances_pass.sv  14_format_constraint_dist_pass.sv  15_format_function_declaration_pass.sv
demo/videos/: :Format.webm  :RtlTree.webm  AutoArg.webm  AutoInst.webm  AutoWire.webm  GoToDef.webm
docs/: AGENTS.md  README.md  background-compilation.md  connect.md  disconnect.md  features.md  format-options.md  interface.md
docs/autoarg/: index.md
docs/autoff/: index.md
docs/autofunc/: index.md
docs/autoinst/: index.md
docs/autowire/: index.md
docs/design/: index.md
docs/dev/: completion.md  files.md  indexing.md  test.md
docs/diagnostics/: background-compilation.md
docs/folding/: index.md
docs/formatter/: cli.md  macros.md  options.md
docs/linter/: AGENTS.md  options.md
docs/lsp/: completion.md  index.md  install.md
docs/releases/: v1.0.0.md  v1.0.2.md  v1.0.4.md  v1.0.6.md  v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.2.md  v1.2.5.md  v1.2.6.md  v1.2.7.md  v1.2.8.md  v1.3.0.md  v1.3.1.md  v1.3.3.md
docs/rtl-tree/: index.md
lua/lazyverilog/: checksums.lua  config.lua  init.lua  lsp.lua  version.lua
plugin/: lazyverilog.vim
slang-playground/: common.cpp
src/: analyzer.cpp  analyzer.hpp  background_compiler.cpp  background_compiler.hpp  config.cpp  config.hpp  document_state.hpp  dynamic_file_index.cpp  dynamic_file_index.hpp  filelist.cpp  filelist.hpp  main.cpp  server.cpp  server.hpp  string_utils.hpp  syntax_index.cpp  syntax_index.hpp  syntax_index_shared.cpp  syntax_index_shared.hpp
src/features/: autoarg.cpp  autoarg.hpp  autoff.cpp  autoff.hpp  autofunc.cpp  autofunc.hpp  autoinst.cpp  autoinst.hpp  autowire.cpp  autowire.hpp  code_action.cpp  code_action.hpp  completion.cpp  completion.hpp  connect.cpp  connect.hpp  folding_range.cpp  formatter.cpp  formatter.hpp  formatter_lexer.hpp  formatter_log.hpp  formatter_old.cpp  formatter_passes.hpp  formatter_renderer.hpp  formatter_token.hpp  hover.cpp  hover.hpp  inlay_hints.cpp  inlay_hints.hpp  lint.cpp  lint.hpp  references.cpp  references.hpp  rename.cpp  rename.hpp  signature_help.cpp  signature_help.hpp  workspace_symbols.cpp  workspace_symbols.hpp
tests/: rtl_format_sweep.cpp  test_autoff.cpp  test_completion.cpp  test_config.cpp  test_connect.cpp  test_definition.cpp  test_filelist.cpp  test_folding_ranges.cpp  test_formatter.cpp  test_inlay_hints.cpp  test_lint.cpp  test_lsp_features.cpp  test_path_uri.cpp  test_references.cpp  test_rename.cpp  test_syntax_index.cpp
tools/: diff_once_twice  fmt_file.cpp  parse_bench.cpp  release.sh  remove_release.sh  run_clean_nvim.sh  run_parse_bench_opentitan.sh
vscode/: .vscodeignore  LICENSE  package-lock.json  package.json
vscode/src/: checksums.ts  commands.ts  connect.ts  extension.ts  rtltree.ts  version.ts
vscode/syntaxes/: systemverilog.tmLanguage.json  verilog.tmLanguage.json
